# optixpt

./: CMakeLists.txt  readme.txt
include/: tiny_gltf.h
reference/: CMakeLists.txt  optixPathTracer.cpp  optixPathTracer.cu  optixPathTracer.h
scenes/: camera.txt  scene.glb  scene1.glb
src/: device.cu  main.cpp  main_old.cpp  params.h
